k8s/manifests/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: foobar-tcp
  namespace: foobar-app
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`api.foobar.local`)
      services:
        - name: foobar-service
          port: 80
  tls:
    passthrough: true
